@@ -4,6 +4,8 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.1
 
 	- Documention fixes (STR #3296)
+	- The libusb-based USB backend would hang at the end of the job
+	  (STR #3315)
 	- DNS-SD registrations for raw queues had an empty "ty" key (STR #3299)
 	- The JPEG and BMP MIME type rules were broken (STR #3284)
 	- cupsGetNamedDest returned the default printer when the named
